force-app/main/default/objects/Source__c/Source__c.object-meta.xml
<CustomObject>
    <description>Part of the &quot;Data Partner&quot; model. A Source represents the Products that Similarweb pulls the data from. We get the &quot;Sources&quot; from the Data Partners.</description>
    <label>Source</label>
    <nameField>
        <label>Sources  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>