force-app/main/default/objects/Source__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Source is active or not. In case all the related &quot;Rates&quot; are with End Date less than Today it should be deactivated.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>