force-app/main/default/objects/Source__c/fields/Count_Deactivated_Rates__c.field-meta.xml
<CustomField>
    <fullName>Count_Deactivated_Rates__c</fullName>
    <description>How many deactivated Rated under the Source</description>
    <label>Count Deactivated Rates</label>
    <summaryFilterItems>
        <field>Rate__c.Active__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Rate__c.Source__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>