force-app/main/default/objects/Source__c/fields/Count_Rates__c.field-meta.xml
<CustomField>
    <fullName>Count_Rates__c</fullName>
    <description>How many related Rates under the Source</description>
    <label>Count Rates</label>
    <summaryForeignKey>Rate__c.Source__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>