force-app/main/default/objects/Source__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>MIS-3889</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Solution Specific</fullName>
            </value>
            <value>
                <fullName>Scraping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>