force-app/main/default/objects/Source__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>MIS-3889</description>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tracker</fullName>
            </value>
            <value>
                <fullName>S2S</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>Scraping</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>