force-app/main/default/objects/Source__c/fields/Source_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Number__c</fullName>
    <label>Source Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>