force-app/main/default/objects/Source__c/listViews/All_Sources.listView-meta.xml
<ListView>
    <fullName>All_Sources</fullName>
    <columns>NAME</columns>
    <columns>Source_Number__c</columns>
    <columns>Active__c</columns>
    <columns>Contract__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Solution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sources - Active - Partners</label>
</ListView>